<resources>
    <string name="app_name">SE Senior Project</string>
    <string name="title_activity_main">SE Senior Project</string>
    <string name="tab_text_1">General</string>
    <string name="tab_text_2">Project</string>
    <string name="tab_text_3">TODO</string>
    <string name="action_settings">Switch Project</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="senior_project">Senior Project</string>
    <string name="description">Description:</string>
    <string name="details">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="important_dates">Important Dates:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="project_name">Project Name:</string>
    <string name="edit">Edit</string>
    <string name="sample_project_name">Sample Project Name</string>
    <string name="details_lbl">Details:</string>
    <string name="member_lbl">Member:</string>
    <string name="mr_member_1">Mr. Member 1</string>
    <string name="mr_member_2">Mr. Member 2</string>
    <string name="adviser_lbl">Adviser</string>
    <string name="dr_advisor_name">Dr. Advisor Name</string>
    <string name="todo">TODO</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title:</string>
    <string name="add_a_todo">Add a Todo</string>
    <string name="pick">Pick</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="day_month_year">Day/Month/Year</string>
    <string name="time">Time</string>
    <string name="datetime">Datetime:</string>
    <string name="add">Add</string>
    <string name="project_name2">Project Name :</string>
    <string name="project_detail2">Project Detail :</string>
    <string name="member2">Member :</string>
    <string name="advisor">Advisor :</string>
    <string name="create">create</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="who">Who:</string>
    <string name="switch_project">Switch Project</string>
    <string name="open_project">Open Project</string>
    <string name="project_id_text">Project ID</string>
    <string name="pass_phrase">Pass Phrase</string>
    <string name="create_a_new_project">Create a New Project</string>
    <string name="se_senior_project">SE Senior Project</string>

</resources>
