<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/projectLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/edit"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_name"
            android:layout_marginTop="5dp"
            android:text="@string/sample_project_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/project_name"
            android:layout_marginTop="10dp"
            android:text="@string/details_lbl"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/project_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_details"
            android:layout_marginTop="5dp"
            android:text="@string/details"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lbl_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/project_details"
            android:layout_marginTop="10dp"
            android:text="@string/member_lbl"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/member1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_member"
            android:text="@string/mr_member_1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/member2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/member1"
            android:text="@string/mr_member_2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl_adviser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/member2"
            android:layout_marginTop="10dp"
            android:text="@string/adviser_lbl"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl_adviserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_adviser"
            android:text="@string/dr_advisor_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/switch_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_adviserName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/switch_project" />

    </RelativeLayout>
</ScrollView>