<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="10dp"
    tools:context=".AddTODOActivity">

    <TextView
        android:id="@+id/lbl_addtodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_a_todo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_addtodo"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/who_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_container"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/lbl_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/who"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_mr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/who2_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/who_container"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="5">

        <EditText
            android:id="@+id/et_mr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/who2_container"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/lbl_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetime"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="40dp"
            android:text="@string/day_month_year"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="10dp"
            android:text="@string/time"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/picker_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_container"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/datepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/timepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/picker_container"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addTodo"
            android:text="@string/add" />
    </LinearLayout>

</RelativeLayout>