<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="35dp"
        android:background="@color/translucent_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/project_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/project_name2"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/project_name_input"
            android:layout_width="288dp"
            android:layout_height="37dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/edit_text_style"
            android:inputType="text"
            android:textColor="#ffffff"
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/project_detail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/project_detail2"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/project_detail_input"
            android:layout_width="288dp"
            android:layout_height="52dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/edit_text_style"
            android:inputType="text"
            android:textColor="#ffffff"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/member_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/member2"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/member_input"
            android:layout_width="288dp"
            android:layout_height="52dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/edit_text_style"
            android:inputType="text"

            android:textColor="#ffffff"
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/advisor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/advisor"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/advisor_input"
            android:layout_width="288dp"
            android:layout_height="37dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/edit_text_style"
            android:inputType="text"

            android:textColor="#ffffff"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/pass_phrase_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/pass_phrase"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/pass_phrase_input"
            android:layout_width="288dp"
            android:layout_height="37dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/edit_text_style"
            android:inputType="text"
            android:textColor="#ffffff"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button"
        android:text="@string/save"
        android:textColor="#42b8df" />

</RelativeLayout>